--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "^2.9.0",
     "react-native-simple-toast": "^1.1.2",
     "react-native-sqlite-storage": "^5.0.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation-header-buttons": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
