--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/picker": "^1.6.5",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dialog": "^5.6.0",
+    "react-native-dropdown-picker": "^3.0.5",
     "react-native-elements": "^2.0.2",
     "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "^1.6.1",
